bitcoin-deployment.yml
# Deployment
apiVersion: apps/v1
kind: Deployment

metadata:
  name: bitcoin-deployment
  labels:
    app: bitcoin

spec:
  replicas: 1
  selector:
    matchLabels:
      app: bitcoin
  template:
    metadata:
      labels:
        app: bitcoin
    spec:
      containers:
        - name: bitcoin
          image: salehtaha/docker-final-task:1.1
          ports:
            - containerPort: 8012

---
# Service

apiVersion: v1
kind: Service

metadata:
  name: bitcoin-service

spec:
  selector:
    app: bitcoin
  ports:
    - protocol: TCP
      port: 8012
      targetPort: 8012
  type: ClusterIP
