ynet-deployment.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ynet-deployment

  labels:
    app: ynet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ynet
  template:
    metadata:
      labels:
        app: ynet
    spec:
      containers:
      - name: ynet
        image: salehtaha/ynet-news:latest
        ports:
         - containerPort: 8011

---
#service         
apiVersion: v1
kind: Service
metadata:
  name: ynet-service
  labels:
    app: ynet
spec:
  selector:
    app: ynet
  ports:
  - port: 8011
    targetPort: 8011
  type: ClusterIP
